[MS] Fixed style issues: - the `;` is alone on it's line on invitation modal - Added ellipsis to folder names in folder selection modal - Fix style issues in UserCard, UserDetailsModal and OrganizationSwitchPopover ellipsis, overflow, white-space - Avoid shrinking of dropdown in workspace sharing modal - Update settings locales for skipping viewers option - Details modal: fix title and file name display - Update file operation item to handle long file names - Update read only text info - Update spinner position for SSO login

--- a/client/src/theme/components/_file-operation.scss
+++ b/client/src/theme/components/_file-operation.scss
@@ -12,6 +12,9 @@
 
   strong {
     font-weight: 700;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .element {
